--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ add_subdirectory(core)
 add_subdirectory(assignments/assignment1_helloTriangle)
 add_subdirectory(assignments/assignment2_jumpingDude)
 add_subdirectory(assignments/assignment3_3d)
+add_subdirectory(assignments/assignment4_light)
